# cmake_codegen

./: CMakeLists.txt  Pipfile  README.md
Project/: CMakeLists.txt
Project/generators/: Autogen.py
Project/generators/templates/: Autogen.h
_codegen/: __main__.py
_codegen/lib/: clang.py  helpers.py
_setup/: setup_env.ps1  setup_env.sh  setup_pipenv.ps1  setup_pipenv.sh
